# intersections2d

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  pybind.cpp  utils.cmake
python/: Makefile  __init__.py  setup.py
src/intersections2d/: intersections2d.hpp
tests/: test_bindings.py  test_flatbush.cpp
